tests/errors/semantic/E010_reexport_private.zy
# E010_reexport_private {
    <# ./E010_base <= base

    #> {
        base::public_fn
        base::secret_fn
    }
}
